<resources>

    <string name="app_name">one root v2 </string>
    <string name="tv_take_photo">Take photo</string>
    <string name="loadButtonText">load truck</string>
    <string name="video">video view</string>
    <string name="background">background_image</string>
    <string name="camera">camera view</string>
    <string name="image_session">image session</string>
    <string name="ok_string">OK</string>
    <string name="company_name">One Root</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_check_box">Keep me Signed in</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="login_name">Register</string>
    <string name="phone_no">phone no</string>
    <string name="switch1">Switch</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_in_fragment_text">log in fragment\n</string>
    <string name="register_fragment_text">register fragment\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_pictures_text">send data</string>
    <string name="displaying_image">displaying_image</string>
    <string name="gallery">gallery</string>
    <string name="sessions">Sessions</string>
    <string name="session_count">0</string>
    <string name="coconut_count">0</string>
    <string name="income">0</string>
    <string name="sever_response">sever_response</string>
    <string name="sendButtonText">send</string>
    <string name="settingsButtonText">save</string>
    <string name="income_text">income</string>
    <string name="latitude_text">Latitude</string>
    <string name="longitude_text">Longitude</string>
    <string name="country_name_text">Country Name</string>
    <string name="locality_text">Locality</string>
    <string name="address_text">Address</string>
    <string name="unloading_truck_text">unloading truck</string>
    <string name="resume_session_text">resume session</string>
    <string name="server_button_text">server connect</string>
    <string name="sync_profile_data_text">sync profile data</string>
    <string name="locationAutoText">Choose Location\n</string>
    <string name="roleText">choose role</string>
    <string name="ProfileCoconutsName">last session coconuts</string>
    <string name="captureText">capture</string>
    <string name="location_view_text">location</string>
    <string name="session_previous_button_name">previous Button</string>
    <string name="session_next_button_name">next Button</string>
    <string name="uninstallText">App Down !!!!! \nPlease uninstall \nthis app</string>

    <string-array name="location_list">
        <item>Chamrajnagar</item>
        <item>Maddur</item>
        <item>Pollachi</item>
        <item>Other</item>
    </string-array>

    <string-array name="role_list">
        <item>counting manager</item>
        <item>quality manager</item>
        <item>farmer</item>
        <item>cc manager</item>
        <item>Field Professional</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_upload_images">UploadImagesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="upload_button_text">upload\n to\n cloud\n</string>
    <string name="uploadingImagesText">Uploading images:</string>
    <string name="progressText">0/0</string>
    <string name="drop_down_text">TEXT</string>

</resources>