<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context="com.example.onerootv2.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#3fff"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/company_name"
            android:textColor="#020202" />

        <EditText
            android:id="@+id/username"
            android:layout_width="282dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:autofillHints="username"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/password"
            android:layout_width="282dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#000000"
            android:autofillHints="password" />

        <CheckBox
            android:id="@+id/signInCheck"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="#000000"
            android:text="@string/sign_in_check_box"
            android:textColor="#040404" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:text="@string/sign_in_button"
            android:textAllCaps="false"
            android:textColor="#000000"
            />

        <!--        <View-->
        <!--            android:layout_width="fill_parent"-->
        <!--            android:layout_height="2dp"-->
        <!--            android:background="#3fff"-->
        <!--            android:layout_marginTop="15dp"/>-->

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="51dp"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:text="Forget Password"-->
        <!--            android:textColor="#000000"-->
        <!--             />-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>