<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.onerootv2.ProfileFragment">

    <RelativeLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/nature"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Circular Image View  -->

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="242dp"
            android:layout_height="181dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="84dp"
            android:src="@drawable/profile_avatar"
            app:civ_border_color="#6261B1"
            app:civ_border_width="4dp" />

        <TextView
            android:id="@+id/locationView"
            android:layout_width="118dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="13dp"
            android:text="@string/location_view_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/userNameView"
            android:layout_width="118dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="147dp"
            android:layout_marginBottom="47dp"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="3"
            android:background="#E0E8FF"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sessions"
                    android:textColor="#000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/SessionsNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/session_count"
                    android:textColor="#1E88E5"
                    android:textSize="27sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ProfileCoconutsName"
                    android:textColor="#000"
                    android:textSize="17sp"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/coconutNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coconut_count"
                    android:textColor="#1E88E5"
                    android:textSize="27sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income_text"
                    android:textColor="#000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/incomeNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textColor="#1E88E5"
                    android:textSize="27sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/gallery_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/gallery"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.489" />
</androidx.constraintlayout.widget.ConstraintLayout>