<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.onerootv2.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/b3"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp"
        android:minHeight="48dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sessionButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:background="@drawable/round_button"
        android:text="@string/resume_session_text"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="RelativeOverlap,RtlHardcoded"
        tools:visibility="visible"
        android:minHeight="48dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoadButton"
        android:layout_width="165dp"
        android:layout_height="68dp"
        android:layout_gravity="bottom|left"
        android:background="@drawable/round_button"
        android:paddingLeft="16dp"
        android:drawableLeft="@drawable/truck_loading"
        android:minHeight="48dp"
        android:text="@string/loadButtonText"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695"
        tools:ignore="RelativeOverlap,RtlHardcoded"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/unLoadButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:background="@drawable/round_button"
        android:paddingLeft="16dp"
        android:drawableLeft="@drawable/truck_unload"
        android:text="@string/unloading_truck_text"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695"
        tools:ignore="RelativeOverlap,RtlHardcoded"
        tools:visibility="visible"
        android:minHeight="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
