<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context="com.example.onerootv2.RegisterFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="30dp"
        android:text="@string/login_name"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/register_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355"
        tools:layout_conversion_absoluteHeight="94dp"
        tools:layout_conversion_absoluteWidth="152dp" />

    <EditText
        android:id="@+id/register_user_name"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:layout_marginBottom="552dp"
        android:autofillHints="user_name"
        android:background="@drawable/custom_button"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@drawable/color_cursor"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="358dp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/custom_button"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@drawable/color_cursor"

        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_user_name"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="361dp" />

    <EditText
        android:id="@+id/mobile_no"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:autofillHints="phone no"
        android:background="@drawable/custom_button"
        android:hint="@string/phone_no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@drawable/color_cursor"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        app:layout_constraintVertical_bias="0.116"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="361dp" />

    <!--Create a TextInputLayout and choose the style,
    for now we are choosing the OutlinedBox ExposedDropdownMenu   -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="410dp"
        android:layout_height="78dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_no"
        app:layout_constraintVertical_bias="0.0">

        <!-- Inside text input layout add
              an auto complete text view
                and make its input type to none-->

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="379dp"
            android:layout_height="59dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:inputType="none"
            android:text="@string/locationAutoText"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/roleLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="409dp"
        android:layout_height="57dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_no"
        app:layout_constraintVertical_bias="0.688">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView2"
            android:layout_width="379dp"
            android:layout_height="59dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:inputType="none"
            android:text="@string/roleText"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="96dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="98dp"
        tools:layout_conversion_absoluteWidth="411dp">

        <Button
            android:id="@+id/reset"
            android:layout_width="153dp"
            android:layout_height="65dp"
            android:background="@drawable/round_button"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="150dp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="155dp"
            android:layout_height="59dp"
            android:background="@drawable/round_button"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/reset"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="150dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>